[package]
name = "prefix-tree-rs"
version = "0.1.0"
edition = "2021"
authors = ["Antonio Perrone <anperrone86@gmail.com>"]
description = "A Trie (prefix tree) implementation"
license = "MIT"
repository = "https://github.com/fushji/prefix-tree"
homepage = "https://github.com/fushji/prefix-tree"
readme = "README.md"
keywords = ["trie", "prefix-tree", "data-structure", "rust"]
categories = ["data-structures"]

[dependencies]
